# pdforg

./: .gitignore  Cargo.toml  README.md  check_output.txt  check_output_new.txt  fix_js.ps1  publish-final.ps1  publish-remaining.ps1  publish.ps1  rename.ps1
crates/pdf-cli/: Cargo.toml
crates/pdf-cli/src/: main.rs
crates/pdf-core/: Cargo.toml
crates/pdf-core/src/: document.rs  lib.rs  presentation.rs  spreadsheet.rs
crates/pdf-formats/: Cargo.toml
crates/pdf-formats/src/: docx.rs  lib.rs  odf.rs  pptx.rs  rtf.rs  xlsx.rs
crates/pdf-pdf/: Cargo.toml
crates/pdf-pdf/src/: creator.rs  lib.rs  manipulator.rs
crates/pdf-render/: Cargo.toml
crates/pdf-render/src/: canvas.rs  lib.rs  rasterizer.rs
crates/pdf-server/: Cargo.toml
crates/pdf-server/src/: api.rs  assets.rs  lib.rs  protocol.rs  ws.rs
crates/pdf-sheets/: Cargo.toml
crates/pdf-sheets/src/: dep_graph.rs  evaluator.rs  functions.rs  lib.rs  parser.rs  viewport.rs
crates/pdf-slides/: Cargo.toml
crates/pdf-slides/src/: lib.rs  renderer.rs
crates/pdf-spell/: Cargo.toml
crates/pdf-spell/src/: checker.rs  lib.rs
crates/pdf-spell/words/: en_common.txt
crates/pdf-storage/: Cargo.toml
crates/pdf-storage/src/: lib.rs
crates/pdf-ui/: Cargo.toml
crates/pdf-ui/src/: lib.rs
crates/pdf-writer/: Cargo.toml
crates/pdf-writer/src/: layout.rs  lib.rs  ot.rs  tracked_changes.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/shared/: FileDropzone.tsx
frontend/src/data/: toolsRegistry.ts
frontend/src/hooks/: useRecentFiles.ts  useTheme.tsx  useToast.tsx  useToolExecution.ts
frontend/src/pages/: AllTools.tsx  Dashboard.tsx  ToolPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: animations.css  components.css  globals.css
src/: lib.rs  main.rs
src/core/: common.rs  document.rs  mod.rs  presentation.rs  spreadsheet.rs
src/formats/: docx.rs  mod.rs  odf.rs  pptx.rs  rtf.rs  xlsx.rs
src/pdf_tools/: compress.rs  creator.rs  images.rs  manipulator.rs  metadata.rs  mod.rs  protect.rs  stamp.rs
src/render/: canvas.rs  mod.rs  rasterizer.rs
src/server/: api.rs  assets.rs  mod.rs  protocol.rs  ws.rs
src/sheets/: dep_graph.rs  evaluator.rs  functions.rs  lexer.rs  mod.rs  parser.rs  viewport.rs
src/slides/: renderer.rs
src/spell/: aff.rs  checker.rs  mod.rs
src/storage/: mod.rs
src/writer/: layout.rs  mod.rs  ot.rs  tracked_changes.rs
vercel-landing/: index.html
