[package]
name = "pdforg"
version = "0.2.0"
edition = "2021"
description = "PDF Office — local-first, private, Rust-native office suite (Writer, Sheets, Slides, PDF Tools)"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
homepage = "https://github.com/chandanhastantram/pdforg"
readme = "README.md"
keywords = ["office", "pdf", "writer", "spreadsheet", "presentation"]
categories = ["command-line-utilities", "text-editors"]
default-run = "pdf"

[[bin]]
name = "pdf"
path = "src/main.rs"

[lib]
name = "pdforg"
path = "src/lib.rs"

[dependencies]
# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Async runtime + web server
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.7", features = ["ws", "multipart"] }
tower-http  = { version = "0.5", features = ["fs", "cors", "trace"] }
futures     = "0.3"

# CLI
clap        = { version = "4", features = ["derive"] }

# Database
rusqlite    = { version = "0.31", features = ["bundled"] }

# UUID / Time
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }

# File formats
zip         = "2"
quick-xml   = "0.36"

# Images / Rendering
image       = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tiny-skia   = "0.11"

# PDF
lopdf       = "0.33"
flate2      = "1"
rand        = { version = "0.8", features = ["small_rng"] }
md-5        = "0.10"
sha2        = "0.10"
aes         = "0.8"
cbc         = { version = "0.1", features = ["alloc"] }
byteorder   = "1"
bitflags    = "2"

# Error handling
thiserror   = "1"
anyhow      = "1"

# Logging
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

# Parallelism
rayon       = "1"

# Text
unicode-segmentation = "1"

# Collections
indexmap    = { version = "2", features = ["serde"] }

# Open browser
open        = "5"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
