[package]
name = "pdforg"
version = "0.1.0"
edition = "2021"
description = "PDF Office — local-first, private, Rust-native office suite (Writer, Sheets, Slides, PDF Tools)"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
homepage = "https://github.com/chandanhastantram/pdforg"
readme = "../../README.md"
keywords = ["office", "pdf", "writer", "spreadsheet", "presentation"]
categories = ["command-line-utilities", "text-editors"]
default-run = "pdf"

[[bin]]
name = "pdf"
path = "src/main.rs"

[dependencies]
pdf-core    = { path = "../pdf-core",    version = "0.1.0", package = "pdforg-core" }
pdf-formats = { path = "../pdf-formats", version = "0.1.0", package = "pdforg-formats" }
pdf-pdf     = { path = "../pdf-pdf",     version = "0.1.0", package = "pdforg-pdf" }
pdf-spell   = { path = "../pdf-spell",   version = "0.1.0", package = "pdforg-spell" }
pdf-storage = { path = "../pdf-storage", version = "0.1.0", package = "pdforg-storage" }
pdf-server  = { path = "../pdf-server",  version = "0.1.0", package = "pdforg-server" }

clap               = { version = "4", features = ["derive"] }
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
open               = "5"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
