[package]
name = "pdforg-core"
version = "0.1.0"
edition = "2021"
description = "Core data types for PDF Office — documents, cells, slides"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["office", "pdf", "document"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
