[package]
name = "pdforg-formats"
version = "0.1.0"
edition = "2021"
description = "File format parsers for PDF Office (docx, xlsx, pptx, odt)"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["docx", "xlsx", "pptx", "office"]
categories = ["parser-implementations"]

[dependencies]
pdf-core  = { path = "../pdf-core", version = "0.1.0", package = "pdforg-core" }
zip       = "2"
quick-xml = "0.36"
uuid      = { version = "1", features = ["v4"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
