[package]
name = "pdforg-pdf"
version = "0.1.0"
edition = "2021"
description = "PDF manipulation engine for PDF Office (view, merge, split, watermark)"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["pdf", "office", "merge"]
categories = ["parser-implementations"]

[dependencies]
pdf-core  = { path = "../pdf-core", version = "0.1.0", package = "pdforg-core" }
lopdf     = "0.33"
image     = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "1"
