[package]
name = "pdforg-render"
version = "0.1.0"
edition = "2021"
description = "SVG/raster renderer for PDF Office"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["pdf", "render", "svg"]
categories = ["rendering"]

[dependencies]
pdf-core   = { path = "../pdf-core",   version = "0.1.0", package = "pdforg-core" }
pdf-writer = { path = "../pdf-writer", version = "0.1.0", package = "pdforg-writer" }
tiny-skia  = "0.11"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
