[package]
name = "pdforg-server"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP + WebSocket server for PDF Office"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["office", "server", "axum"]
categories = ["web-programming::http-server"]

[dependencies]
pdf-core    = { path = "../pdf-core",    version = "0.1.0", package = "pdforg-core" }
pdf-writer  = { path = "../pdf-writer",  version = "0.1.0", package = "pdforg-writer" }
pdf-sheets  = { path = "../pdf-sheets",  version = "0.1.0", package = "pdforg-sheets" }
pdf-slides  = { path = "../pdf-slides",  version = "0.1.0", package = "pdforg-slides" }
pdf-pdf     = { path = "../pdf-pdf",     version = "0.1.0", package = "pdforg-pdf" }
pdf-formats = { path = "../pdf-formats", version = "0.1.0", package = "pdforg-formats" }
pdf-spell   = { path = "../pdf-spell",   version = "0.1.0", package = "pdforg-spell" }
pdf-render  = { path = "../pdf-render",  version = "0.1.0", package = "pdforg-render" }
pdf-storage = { path = "../pdf-storage", version = "0.1.0", package = "pdforg-storage" }

axum        = { version = "0.7", features = ["ws", "multipart"] }
tokio       = { version = "1", features = ["full"] }
tower-http  = { version = "0.5", features = ["cors", "fs"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
futures     = "0.3"
tracing     = "0.1"
