[package]
name = "pdf-sheets"
version.workspace = true
edition.workspace = true

[dependencies]
pdf-core = { path = "../pdf-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
