[package]
name = "pdforg-slides"
version = "0.1.0"
edition = "2021"
description = "Presentation engine for PDF Office"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["office", "slides", "presentation"]
categories = ["text-editors"]

[dependencies]
pdf-core   = { path = "../pdf-core", version = "0.1.0", package = "pdforg-core" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
