[package]
name = "pdforg-spell"
version = "0.1.0"
edition = "2021"
description = "Spell checker for PDF Office"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["spell", "spell-check", "office"]
categories = ["text-processing"]

[dependencies]
unicode-segmentation = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
