[package]
name = "pdf-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf-core    = { path = "../pdf-core" }
rusqlite    = { version = "0.31", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
zip         = "2"
thiserror   = "1"
