[package]
name = "pdforg-storage"
version = "0.1.0"
edition = "2021"
description = "SQLite storage layer for PDF Office documents"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["office", "storage", "sqlite"]
categories = ["database"]

[dependencies]
pdf-core   = { path = "../pdf-core", version = "0.1.0", package = "pdforg-core" }
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
zip        = "2"
thiserror  = "1"
