[package]
name = "pdforg-ui"
version = "0.1.0"
edition = "2021"
description = "UI helpers for PDF Office"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib", "rlib"]
