[package]
name = "pdf-writer"
version.workspace = true
edition.workspace = true

[dependencies]
pdf-core = { path = "../pdf-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }
