[package]
name = "pdforg-writer"
version = "0.1.0"
edition = "2021"
description = "Word processor engine for PDF Office"
license = "MIT"
repository = "https://github.com/chandanhastantram/pdforg"
keywords = ["office", "writer", "word-processor"]
categories = ["text-editors"]

[dependencies]
pdf-core     = { path = "../pdf-core", version = "0.1.0", package = "pdforg-core" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
thiserror    = "1"
unicode-segmentation = "1"
